[package]
name = "exam"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.4.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11.3"
toml = "0.8.15"
futures = "0.3"
thiserror = "1.0"
rand = "0.8"
reqwest = { version = "0.12.5", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
